Prevent a tag from wrapping in the middle

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,6 +80,10 @@
     line-height: 1;
 }
 
+.post-tag {
+    white-space: nowrap;
+}
+
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
